# spectral

./: ChangeLog  GenerateSignalDurRunninglog.c  Makefile  README.txt  SenyalD.c  SenyalE.c  aclocal.m4  compute_shift.pl  configure-mn.sh  configure-mt.sh  configure.ac  fft.c  fftprev.c  optim-functions.c  optim-functions.h  optim-macros.h  optim.c  optim.h  signal_interface.c  signal_interface.h  wavelet.c
Aplicacion/: Makefile  SenyalD.c  SenyalD.h  SenyalE.c  SenyalE.h  cgprof.sh  draw_signal.gnuplot  extrae.xml  fft.c  fft.h  fftprev.c  fftprev.h  labels.data  optim-functions.c  optim-functions.h  optim-macros.h  optim.c  optim.h  signal_interface.c  signal_interface.h  test.sh  wavelet.c  wavelet.h
Aplicacion/cfg Paraver/: OMPSs.cfg  SMPSs.cfg  secuencial.cfg  trace2trace.cfg
TRACE2TRACE/: Makefile
TRACE2TRACE/cutter/: Makefile  cutter_2.7.c
TRACE2TRACE/lib/: trace2trace.h
TRACE2TRACE/trace_filter/: Makefile  trace_filter_OMP.1.2.c
config/: macros.m4
src/: Makefile.am  compare-signals.c  csv-analysis.c  cutter_2.7.c  dilation.c  dilation.h  erosion.c  erosion.h  fft.c  fft.h  fftprev.c  fftprev.h  optim-functions.c  optim-functions.h  optim-macros.h  optim-main.c  optim-main.cpp  optim.c  optim.h  plot-signal  reconstruct_trace.cpp  reconstruct_trace.h  signal-analysis.c  spectral-api.c  spectral-api.h  trace2trace.h  trace_filter_OMP.1.2.c  wavelet.c  wavelet.h
